src/Akeneo/Platform/Bundle/UIBundle/Resources/public/less/components/Subsection.less
@import '../base/variables';

.AknSubsection {
  &-title {
    background: white;
    color: @AknSlateGrey;
    font-size: @AknFontSizeBig;
    text-transform: uppercase;
    border-bottom: 2px solid @AknSlateGrey;
    font-weight: bold;
    line-height: @AknBigButtonSize;
    display: flex;
    align-items: center;
    margin-bottom: 10px;
    z-index: 2;

    &--sticky {
      position: sticky;
      top: 0;
      padding-top: 10px;

      &.AknSubsection-title--withHeader {
        top: 192px;
      }
    }

    &--light {
      border-bottom: 1px solid @AknGrey;
      font-weight: normal;
      color: @AknLightPurple;
    }

    &--blockDown {
      margin-bottom: 36px;
    }


    &Label {
      flex: 1;
    }
  }

  &-footer {
    background: white;
    border-top: 1px solid @AknGrey;
    display: flex;
    align-items: center;
    z-index: 2;

    &--sticky {
      position: sticky;
      bottom: 0;
      padding: 10px;
    }
  }

  &-container {
    display: flex;
  }

  &-comment {
    margin-left: 5px;
    font-size: @AknDefaultFontSize;
    line-height: 36px;
    text-transform: none;
    font-weight: normal;

    &--clickable {
      color: @AknLightPurple;
      transition: color 0.1s ease-in;
      cursor: pointer;

      &:hover {
        color: @AknPurple;
      }
    }
  }
}

